
Unreleased
------------------

Added
~~~~~~~
-

Changed
~~~~~~~
-

Fixed
~~~~~
- Check in patient features to assign value "unknown" when DICOM tag is not
  present.
- Bug in GLCM and GLCMMS texture features: label name did not include the
  angle, but the distance twice.
- CalcFeatures used to look at the shape parameter in the
  config['ImageFeatures']: fixed to look at histogram instead.

3.0.0 - 2019-05-08
------------------

Added
~~~~~~~
- Move towards Python3 (Python2 not supported anymore!)
- Compatibility for Windows. Some small changes in functions, as some packages
  behaviour differently under Windows. Also, adjusted sink and source paths
  to use OS file separator.
- There is now for each feature group a parameter to determine whether the
  features are extracted or not.

Changed
~~~~~~~
- Major: moved everything except the feature extraction to WORC!
- Scikit-image version, as older version was not compatible with numpy > 1.16
- Merge to Python3: Reduce function removed, imported from functools.
- Merge to Python3: repeat names of package when importing from same folder.
- Merge to numpy16: change in contour functions due to behavior of np.vstack
- Gabor features computed as last in texture features, as these take the longest.
- Use pydicom instead of dicom due to python3 merge.
- csv reader works different and impractical in python3. Use pandas instead
  to read csv.
- Require PyRadiomics 2.1.2, as 2.2.0 seems to have a bug.

Fixed
~~~~~
- Bug in shape features or rather contour functions that specifically occured
  on Windows.
- Except memory error for orientation features: make segmentation smaller.


2.1.3 - 2019-04-08
------------------

Fixed
~~~~~
- Bug in SearchCVJoblib: estimator input removed.
- Bug in SearchCV: error when weights summed to zero in taking weighted average
  and weighted std for the test scores.


2.1.2 - 2019-04-02
------------------

Added
~~~~~~~
- If you have objects with missing features, put in NaN values.